<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout

    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bk"
    tools:context=".signup">


    <LinearLayout
        android:id="@+id/linearLayout3"
        android:layout_width="0dp"
        android:layout_height="60dp"
        android:orientation="horizontal"
        android:weightSum="1"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.050000012">

        <TextView
            android:id="@+id/textView5"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:gravity="bottom|center_vertical"
            android:paddingRight="115dp"
            android:text="@string/account"
            android:textColor="@android:color/background_light"
            android:textSize="30sp"
            android:textStyle="bold" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout4"
        android:layout_width="360dp"
        android:layout_height="470dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="32dp"
        android:layout_marginRight="8dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="@+id/linearLayout3"
        app:layout_constraintVertical_bias="0.69">

        <EditText
            android:id="@+id/ed_uname"
            android:layout_width="wrap_content"
            android:layout_height="60dp"
            android:autofillHints=""
            android:ems="18"
            android:hint="@string/name"
            android:inputType="textPersonName"
            android:paddingRight="30dp"
            android:textColor="@android:color/background_light"
            android:textColorHint="@android:color/background_light"
            tools:targetApi="o" />


        <EditText
            android:id="@+id/ed_mail"
            android:layout_width="wrap_content"
            android:layout_height="60dp"
            android:autofillHints=""
            android:ems="18"
            android:hint="@string/email"
            android:inputType="textEmailAddress"
            android:paddingRight="30dp"
            android:textColor="@android:color/background_light"
            android:textColorHint="@android:color/background_light"
            tools:targetApi="o" />


        <EditText
            android:id="@+id/ed_psw"
            android:layout_width="wrap_content"
            android:layout_height="60dp"
            android:autofillHints=""
            android:ems="18"
            android:gravity="end"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:paddingRight="30dp"
            android:textColor="@android:color/background_light"
            android:textColorHint="@android:color/background_light"
            tools:targetApi="o" />

        <EditText
            android:id="@+id/ed_confirm"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:autofillHints=""
            android:ems="18"
            android:gravity="end"
            android:hint="@string/confirm"
            android:inputType="textPassword"
            android:paddingRight="30dp"
            android:textColor="@android:color/background_light"
            android:textColorHint="@android:color/background_light"
            tools:targetApi="o" />

        <Button
            android:id="@+id/btn_mack_account"
            android:layout_width="wrap_content"
            android:layout_height="35dp"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="50dp"
            android:layout_marginRight="20dp"
            android:width="330dp"
            android:background="@drawable/background_button"
            android:gravity="center"
            android:text="@string/regster"
            android:textColor="@android:color/background_light"
            android:textSize="20sp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/btn_havacc"
            android:layout_width="match_parent"
            android:layout_height="35dp"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="25dp"
            android:layout_marginRight="20dp"
            android:width="330dp"
            android:background="@drawable/background_button"
            android:elevation="1dp"
            android:gravity="center"
            android:text="@string/haveacc"
            android:textColor="@android:color/background_light"
            android:textSize="17sp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/btnskip"
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:layout_gravity="left|center"
            android:layout_marginTop="45dp"
            android:background="@android:color/transparent"
            android:contextClickable="true"
            android:elevation="1dp"
            android:text="@string/skip"
            android:textColor="@android:color/background_light"
            android:textSize="20sp"
            android:textStyle="bold" />

    </LinearLayout>

</android.support.constraint.ConstraintLayout>