<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout

    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bk"
    tools:context=".signup">


    <LinearLayout
        android:id="@+id/linearLayout3"
        android:layout_width="0dp"
        android:layout_height="60dp"
        android:orientation="horizontal"
        android:weightSum="1"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.06999999">

        <TextView
            android:id="@+id/textView5"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:gravity="bottom|center_vertical"
            android:paddingRight="110dp"
            android:text="@string/login"
            android:textColor="@android:color/background_light"
            android:textSize="30sp"
            android:textStyle="bold" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout4"
        android:layout_width="370dp"
        android:layout_height="550dp"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:orientation="vertical"
        android:paddingTop="20dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.52"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="@+id/linearLayout3"
        app:layout_constraintVertical_bias="0.925">


        <EditText
            android:id="@+id/mail"
            android:layout_width="wrap_content"
            android:layout_height="80dp"
            android:layout_marginTop="50dp"
            android:layout_marginRight="10dp"
            android:autofillHints=""
            android:ems="18"
            android:hint="@string/email"
            android:inputType="textEmailAddress"
            android:paddingTop="30dp"
            android:textColor="@android:color/background_light"
            android:textColorHint="@android:color/background_light"
            tools:targetApi="o" />


        <EditText
            android:id="@+id/pswd"
            android:layout_width="wrap_content"
            android:layout_height="80dp"
            android:autofillHints=""
            android:ems="18"
            android:gravity="end"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:paddingTop="40dp"
            android:paddingRight="30dp"
            android:textColor="@android:color/background_light"
            android:textColorHint="@android:color/background_light"
            tools:targetApi="o" />

        <Button
            android:id="@+id/btnlogin"
            android:layout_width="360dp"
            android:layout_height="35dp"
            android:layout_marginTop="70dp"
            android:width="330dp"
            android:background="@drawable/background_button"
            android:gravity="center"
            android:text="@string/login_input"
            android:textColor="@android:color/background_light"
            android:textSize="20sp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/btn_create_account"
            android:layout_width="360dp"
            android:layout_height="35dp"
            android:layout_marginTop="15dp"
            android:width="330dp"
            android:background="@drawable/background_button"
            android:elevation="1dp"
            android:gravity="center"
            android:text="@string/create_account"
            android:textColor="@android:color/background_light"
            android:textSize="20sp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/btnskip"
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="110dp"
            android:background="@android:color/transparent"
            android:contextClickable="true"
            android:elevation="1dp"
            android:text="@string/skip"
            android:textColor="@android:color/background_light"
            android:textSize="20sp"
            android:textStyle="bold" />

    </LinearLayout>

</android.support.constraint.ConstraintLayout>