<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="12dp"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp"
        android:elevation="6dp"
        app:cardCornerRadius="20dp"
        app:layout_columnWeight="1"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0"
        app:layout_rowWeight="0">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textView"
                android:layout_width="match_parent"
                android:layout_height="30dp"
                android:layout_marginTop="5dp"
                android:paddingEnd="10dp"
                android:text="@string/question"
                android:textColor="#161414"
                android:textSize="18sp"
                android:textStyle="bold" />

            <RadioButton
                android:id="@+id/radioButton"
                android:layout_width="match_parent"
                android:layout_height="35dp"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="10dp"
                android:button="@null"
                android:drawableRight="@android:drawable/btn_radio"
                android:text="@string/answer1"
                android:textSize="17sp" />

            <RadioButton
                android:id="@+id/radioButton2"
                android:layout_width="match_parent"
                android:layout_height="35dp"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="10dp"
                android:button="@null"
                android:drawableRight="@android:drawable/btn_radio"
                android:text="@string/answer2"
                android:textSize="17sp" />

            <RadioButton
                android:id="@+id/radioButton3"
                android:layout_width="match_parent"
                android:layout_height="35dp"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="10dp"
                android:button="@null"
                android:drawableRight="@android:drawable/btn_radio"
                android:text="@string/answer3"
                android:textSize="17sp" />

        </LinearLayout>

    </android.support.v7.widget.CardView>
</RelativeLayout>