<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorTransparentWhite"
    tools:context="ed.anpanman.Home">

    <View
        android:id="@+id/view"
        android:layout_width="0dp"
        android:layout_height="210dp"
        android:background="@drawable/bgheader"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:layout_editor_absoluteX="0dp" />


    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="75dp"
        android:layout_height="75dp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="15dp"
        android:layout_marginBottom="8dp"
        android:contentDescription="@string/username"
        android:src="@drawable/circle_user"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/view"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.01999998" />

    <TextView
        android:id="@+id/nameuser"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="55dp"


        android:textColor="#FFF"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintStart_toEndOf="@+id/imageView2"
        app:layout_constraintTop_toTopOf="parent" />


    <LinearLayout
        android:id="@+id/ll2"
        android:layout_width="368dp"
        android:layout_height="110dp"
        android:layout_marginLeft="8dp"

        android:layout_marginRight="8dp"
        android:background="@drawable/bgmenus"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/view"
        app:layout_constraintVertical_bias="0.19999999">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:baselineAligned="false"
            android:orientation="horizontal"
            android:paddingTop="10dp"
            android:weightSum="3">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:orientation="vertical">

                <ImageView
                    android:id="@+id/imgqb"
                    android:layout_width="75dp"
                    android:layout_height="60dp"
                    android:layout_marginBottom="8dp"
                    android:src="@drawable/icnet" />

                <TextView
                    android:id="@+id/network"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"

                    android:text="@string/Qbank"
                    android:textColor="#172646"
                    android:textSize="16sp" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:orientation="vertical">

                <ImageView
                    android:id="@+id/imgquiz"
                    android:layout_width="75dp"
                    android:layout_height="60dp"
                    android:layout_marginBottom="8dp"
                    android:src="@drawable/icplug" />

                <TextView
                    android:id="@+id/plugins"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"

                    android:text="@string/test"
                    android:textColor="#172646"
                    android:textSize="16sp" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:orientation="vertical">

                <ImageView
                    android:id="@+id/imglessons"
                    android:layout_width="75dp"
                    android:layout_height="60dp"
                    android:layout_marginBottom="8dp"
                    android:src="@drawable/icapps" />

                <TextView
                    android:id="@+id/myapps"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"

                    android:text="@string/lesson"
                    android:textColor="#172646"
                    android:textSize="16sp" />

            </LinearLayout>

        </LinearLayout>

    </LinearLayout>

    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="250dp"
        android:layout_height="270dp"

        android:layout_marginTop="4dp"
        android:layout_marginBottom="8dp"
        android:contentDescription="@string/app_name"
        android:src="@drawable/anpan"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.527"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ll2"
        app:layout_constraintVertical_bias="0.0" />


    <TextView
        android:id="@+id/pagetitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:layout_marginTop="8dp"
        android:text="@string/need_help"
        android:textColor="#172646"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView3"
        app:layout_constraintVertical_bias="0.0" />

    <Button
        android:id="@+id/btnguide"
        android:layout_width="194dp"
        android:layout_height="wrap_content"

        android:layout_marginTop="8dp"
        android:background="@drawable/bgbtnguide"
        android:text="@string/chatwithme"
        android:textAllCaps="false"
        android:textColor="#FFF"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/pagetitle"
        app:layout_constraintVertical_bias="0.0" />

    <com.nightonke.boommenu.BoomMenuButton
        android:id="@+id/bmb"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginRight="8dp"
        android:visibility="visible"
        app:bmb_autoHide="false"
        app:bmb_boomInWholeScreen="true"
        app:bmb_buttonEnum="textOutsideCircle"
        app:bmb_buttonPlaceEnum="buttonPlace_sc_8_2"
        app:bmb_cacheOptimization="false"
        app:bmb_dimColor="#55000000"
        app:bmb_draggable="true"
        app:bmb_normalColor="#8ADBE3"
        app:bmb_piecePlaceEnum="piecePlace_dot_8_1"
        app:bmb_rotateDegree="100"
        app:bmb_shadowEffect="true"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="@+id/view"
        app:layout_constraintVertical_bias="1.0" />

</android.support.constraint.ConstraintLayout>
